glider stats - get counts

--- a/glider_stats_app/templates/index.html
+++ b/glider_stats_app/templates/index.html
@@ -7,14 +7,14 @@
 <h2>XContest 2023</h2>
 <table class="w3-table w3-bordered">
     <tr>
-        <th>Pilots</th>
-        <th>Flights</th>
-        <th>Gliders</th>
+        <th># Pilots</th>
+        <th># Flights</th>
+        <th># Gliders</th>
     </tr>
     <tr>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
+        <td>{{ pilots }}</td>
+        <td>{{ flights }}</td>
+        <td>{{ gliders }}</td>
     </tr>
 </table>
 
