glider stats - get max rank

--- a/glider_stats_app/templates/pilots.html
+++ b/glider_stats_app/templates/pilots.html
@@ -7,7 +7,9 @@
 {% block content %}
 <h2>XContest 2023</h2>
 
-<!-- <a href="/pilots/load" class="w3-button">Load more pilots</a> -->
+<form action="/pilots" method="post" class="w3-container" autocomplete="off">
+    <input type="submit" value="Load more pilots" class="w3-button"  />
+</form>
 
 <table class="w3-table w3-bordered">
     <tr>
