--- a/glider_stats_app/templates/pilots.html
+++ b/glider_stats_app/templates/pilots.html
@@ -10,6 +10,10 @@
 <form action="/pilots" method="post" class="w3-container" autocomplete="off">
     <input type="submit" value="Load more pilots" class="w3-button"  />
 </form>
+<form action="/pilots/delete" method="post" class="w3-container" autocomplete="off">
+    <input type="submit" value="Delete all pilots" class="w3-button"  />
+</form>
+
 
 <table class="w3-table w3-bordered">
     <tr>
