glider stats - unclassified and classified

--- a/glider_stats_app/templates/gliders.html
+++ b/glider_stats_app/templates/gliders.html
@@ -4,18 +4,33 @@
 
 {% block content %}
 <h2>XContest 2023</h2>
+
+<h3>Unclassified</h3>
+<table class="w3-table w3-bordered">
+    <tr>
+        <th>Glider</th>
+        <th>Count</th>
+    </tr>
+    {% for glider in unclass_gliders %}
+    <tr>
+        <td>{{ glider.glider }}</td>
+        <td>{{ glider.flight_count }}</td>
+    </tr>    
+    {% endfor %}
+</table>
+
+<h3>Classified</h3>
+
 <table class="w3-table w3-bordered">
     <tr>
         <th>Glider</th>
         <th>Class</th>
-        <th>Standrard name</th>
         <th>Count</th>
     </tr>
     {% for glider in gliders %}
     <tr>
-        <td>{{ glider.glider }}</td>
-        <td>{{ glider.class }}</td>
         <td>{{ glider.glider_norm }}</td>
+        <td>{{ glider.class }}</td>
         <td>{{ glider.flight_count }}</td>
     </tr>    
     {% endfor %}
