--- a/glider_stats_app/templates/gliders.html
+++ b/glider_stats_app/templates/gliders.html
@@ -17,7 +17,7 @@
                 <th>Class</th>
                 <th>Count</th>
                 <th colspan="2">Log-Normal params</th>
-                <th colspan="2">P( xc &gt;= X )</th>
+                <th colspan="3">P( xc &gt;= X )</th>
             </tr>
             <tr>
                 <th></th>
@@ -25,6 +25,7 @@
                 <th></th>
                 <th>mu</th>
                 <th>sigma</th>
+                <th>X=50</th>
                 <th>X=100</th>
                 <th>X=200</th>
             </tr>
@@ -34,7 +35,8 @@
                 <td>{{ glider.class }}</td>
                 <td>{{ glider.count }}</td>
                 <td>{{  '{0:0.4f}'.format(glider.mu) }}</td>
-                <td>{{  '{0:0.2f}'.format(glider.sigma) }}</td>
+                <td>{{  '{0:0.4f}'.format(glider.sigma) }}</td>
+                <td>{{ (glider.p50*100)|round|int }} %</td>
                 <td>{{ (glider.p100*100)|round|int }} %</td>
                 <td>{{ (glider.p200*100)|round|int }} %</td>
             </tr>    
