--- a/glider_stats_app/templates/gliders.html
+++ b/glider_stats_app/templates/gliders.html
@@ -11,7 +11,9 @@
     <div class="w3-container w3-twothird">
         <h3>Classified</h3>
         <form action="/gliders" method="get" class="w3-container" autocomplete="off">
-            <input type="submit" value="Filter table" class="w3-button"  />
+            <button type="submit" class="btn btn-success" >
+             <i class="fa fa-filter"></i> Filter table
+            </button>
         <table class="w3-table w3-bordered">
             <tr>
                 <th>Glider</th>
