--- a/glider_stats_app/templates/gliders.html
+++ b/glider_stats_app/templates/gliders.html
@@ -6,16 +6,15 @@
 <h2>XContest 2023</h2>
 
 <div class="w3-row">
-
-    
+   
     <div class="w3-container w3-twothird">
-        <h3>Classified</h3>
         <form action="/gliders" method="get" class="w3-container" autocomplete="off">
             <button type="submit" class="btn btn-success" >
              <i class="fa fa-filter"></i> Filter table
             </button>
         <table class="w3-table w3-bordered">
             <tr>
+                <th></th>
                 <th>Glider</th>
                 <th>Class</th>
                 <th>Count</th>
@@ -23,6 +22,7 @@
                 <th colspan="3">P( xc &gt;= X )</th>
             </tr>
             <tr>
+                <th></th>
                 <th><input id="glider" name="glider" type="text" value="{{filter.glider}}" /></th>
                 <th><input id="class" name="class" type="text" value="{{filter.class}}" /></th>
                 <th></th>
@@ -34,6 +34,7 @@
             </tr>
             {% for glider in gliders %}
             <tr>
+                <td><input type="checkbox" name="{{glider.glider_norm.lower().replace(' ','-')}}" /></td>
                 <td><a href="/gliders/{{ glider.glider_norm.lower().replace(' ','-') }}">{{ glider.glider_norm }}</a></td>
                 <td>{{ glider.class }}</td>
                 <td>{{ glider.count }}</td>
