glider stats - improvements

--- a/glider_stats_app/templates/glider.html
+++ b/glider_stats_app/templates/glider.html
@@ -14,11 +14,13 @@
 
 {% if img_b64 %}
 <div class="w3-container w3-half">
+    <h3>Raw data</h3>
 <img src="{{img_b64}}"/>
 </div>
 {% endif %}
 {% if img2_b64 %}
 <div class="w3-container w3-half">
+    <h3>Transformed</h3>
     <img src="{{img2_b64}}"/>
 </div>
 {% endif %}
