glider stats - filter unclassified

--- a/glider_stats_app/templates/gliders.html
+++ b/glider_stats_app/templates/gliders.html
@@ -75,6 +75,12 @@
         {% endif %}
 
         <h3>Top unclassified</h3>
+        <form action="/gliders" method="get" class="w3-container" autocomplete="off">
+            <input type="text" id="unclass" name="unclass" />
+            <button type="submit" class="btn btn-success" >
+             <i class="fa fa-filter"></i> Filter unclassified
+            </button>
+        </form>
         <table class="w3-table w3-bordered">
             <tr>
                 <th>Glider</th>
