glide stats - more gliders

--- a/glider_stats_app/templates/gliders.html
+++ b/glider_stats_app/templates/gliders.html
@@ -76,7 +76,7 @@
 
         <h3>Top unclassified</h3>
         <form action="/gliders" method="get" class="w3-container" autocomplete="off">
-            <input type="text" id="unclass" name="unclass" />
+            <input type="text" id="unclass" name="unclass" value="{{filter.unclass}}" />
             <button type="submit" class="btn btn-success" >
              <i class="fa fa-filter"></i> Filter unclassified
             </button>
