--- a/glider_stats_app/templates/base.html
+++ b/glider_stats_app/templates/base.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+        <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
         <title>{{title}}</title>
     {% endblock %}
   </head>
