--- a/glider_stats_app/templates/gliders.html
+++ b/glider_stats_app/templates/gliders.html
@@ -7,7 +7,7 @@
 
 <div class="w3-row">
    
-    <div class="w3-container w3-half">
+    <div class="w3-container w3-twothird">
         <details>
             <summary>
             Notes for the table.
@@ -29,24 +29,35 @@
             <tr>
                 <th></th>
                 <th>Glider</th>
-                <th>Class</th>
+                <th width="20px">Class</th>
                 <th>Count</th>
-                <th colspan="2">Log-Normal params</th>
+                <th colspan="3">Log-Normal params</th>
                 <th colspan="3">P( xc &gt;= X )</th>
             </tr>
             <tr>
                 <th></th>
                 <th><input id="glider" name="glider" type="text" value="{{filter.glider}}" /></th>
-                <th><input id="class" name="class" type="text" value="{{filter.class}}" /></th>
+                <th width="20px"><input id="class" name="class" type="text" value="{{filter.class}}" /></th>
                 <th></th>
                 <th>mu</th>
                 <th>sigma</th>
+                <th>log-theta</th>
                 <th>X=50</th>
                 <th>X=100</th>
                 <th>X=200</th>
             </tr>
             {% for glider in gliders %}
-            <tr>
+                <!-- 1.96 * sqrt( 0.8^2 / 200) approx 0.11 -->
+                {% if glider.confidence <= 0.11 %}
+                    <tr class="">
+                {% elif glider.confidence <= 0.165 %} 
+                        <tr class="w3-sand">        
+                <!-- 1.96 * sqrt( 0.8^2 / 50) approx 0.22 -->                
+                {% elif glider.confidence <= 0.22 %} 
+                    <tr class="w3-pale-yellow">
+                {% else %} 
+                    <tr class="w3-pale-red">
+                {% endif %}
                 <td>
                     {% if glider.glider_norm.lower().replace(' ','-') in filter.compare %}
                         <input type="checkbox" name="{{glider.glider_norm.lower().replace(' ','-')}}" checked />
@@ -55,10 +66,11 @@
                     {% endif %}
                 </td>
                 <td><a href="/gliders/{{ glider.glider_norm.lower().replace(' ','-') }}">{{ glider.glider_norm }}</a></td>
-                <td>{{ glider.class }}</td>
+                <td width="20px" >{{ glider.class }}</td>
                 <td>{{ glider.count }}</td>
                 <td>{{  '{0:0.4f}'.format(glider.mu) }}</td>
                 <td>{{  '{0:0.4f}'.format(glider.sigma) }}</td>
+                <td>{{  '{0:0.4f}'.format(glider.mu + 0.5*glider.sigma**2) }} &plusmn; {{  '{0:0.4f}'.format(glider.confidence ) }} </td>
                 <td>{{ (glider.p50*100)|round|int }} %</td>
                 <td>{{ (glider.p100*100)|round|int }} %</td>
                 <td>{{ (glider.p200*100)|round|int }} %</td>
@@ -69,7 +81,7 @@
     </div>
 
 
-    <div class="w3-container w3-half">
+    <div class="w3-container w3-third">
         {% if comparison %}
          <img src="{{comparison}}"/>
         {% endif %}
