--- a/glider_stats_app/templates/gliders.html
+++ b/glider_stats_app/templates/gliders.html
@@ -28,8 +28,8 @@
         <table class="w3-table w3-bordered">
             <tr>
                 <th></th>
-                <th>Glider</th>
-                <th  >Class</th>
+                <th>Glider name</th>
+                <th>Class</th>
                 <th>Count</th>
                 <th colspan="4">Log-Normal params</th>
                 <th colspan="3">P( xc &gt;= X )</th>
@@ -37,7 +37,7 @@
             <tr>
                 <th></th>
                 <th><input id="glider" name="glider" type="text" value="{{filter.glider}}" /></th>
-                <th  ><input id="class" name="class" type="text" value="{{filter.class}}" size="2" /></th>
+                <th><input id="class" name="class" type="text" value="{{filter.class}}" size="2" /></th>
                 <th></th>
                 <th>mu</th>
                 <th>sigma</th>
@@ -107,9 +107,9 @@
              <i class="fa fa-filter"></i> Filter unclassified
             </button>
         </form>
-        <table class="w3-table w3-bordered">
+        <table class="w3-table w3-bordered w3-small">
             <tr>
-                <th>Glider</th>
+                <th>Glider name</th>
                 <th>Count</th>
             </tr>
             {% for glider in unclass_gliders %}
