--- a/glider_stats_app/templates/gliders.html
+++ b/glider_stats_app/templates/gliders.html
@@ -71,7 +71,29 @@
                 <td class="w3-right-align">{{ glider.count }}</td>
                 <td>{{  '{0:0.4f}'.format(glider.mu) }}</td>
                 <td>{{  '{0:0.4f}'.format(glider.sigma) }}</td>
-                <td class="w3-right-align">{{  '{0:0.4f}'.format(glider.mu + 0.5*glider.sigma**2) }} &plusmn; {{  '{0:0.4f}'.format(glider.confidence ) }} </td>
+                <!-- <td class="w3-right-align">{{  '{0:0.4f}'.format(glider.mu + 0.5*glider.sigma**2) }} &plusmn; {{  '{0:0.4f}'.format(glider.confidence ) }} </td> -->
+                <td class="w3-center" style="margin:0px">
+                    {% set barwidth = 120 %}
+                    {% set barheight = 20 %}
+                    {% set tmin = -2.0 %}
+                    {% set tmax = 0.4 %}
+                    <svg width="{{barwidth}}" height="{{barheight}}"  style="stroke:grey;stroke-width:0.5;fill:none;" >
+                        <rect x="0" y="0" width="{{barwidth}}" height="{{barheight-2}}"></rect>
+                        <!--
+                            x = a * logtheta + b
+                            --------------------
+                            logtheta_min = tmin => x_min =  0 = tmin a + b => !b =-tmin a = -tmin/(tmax-tmin) * barwidth
+                            logtheta_max = tmax => x_max = barwidth =  tmax a + b = (tmax-tmin) a => !a = barwidth/(tmax-tmin)
+                        -->
+                        <rect x="{{(glider.mu + 0.5*glider.sigma**2 - glider.confidence)*(barwidth/(tmax-tmin)) + (-tmin*barwidth/(tmax-tmin)) }}" 
+                            y="0" 
+                            width="{{2*glider.confidence*(barwidth/(tmax-tmin))}}" 
+                            height="{{barheight-2}}"
+                            style="fill:blue;fill-opacity:0.25;" >
+                            <title>{{  '{0:0.4f}'.format(glider.mu + 0.5*glider.sigma**2) }} &plusmn; {{  '{0:0.4f}'.format(glider.confidence ) }}</title>
+                        </rect>
+                    </svg>
+                </td>
                 <td>
                     <!-- 1.96 * sqrt( 0.8^2 / 200) approx 0.11 -->
                     {% if glider.confidence <= 0.11 %}
