glider stats - chec Gamma distribution

--- a/glider_stats_app/templates/glider.html
+++ b/glider_stats_app/templates/glider.html
@@ -75,6 +75,7 @@
     <p>X-axis: flights ordered by XC points </p>
     <p>Y-axis: simply the XC point value </p>
     <p>Red line: fitted log-normal distribution curve (normalized to number of points) </p>
+    <p>Green line: Gamma distribution</p>
     <img src="{{img_b64}}"/>
 </div>
 {% endif %}
@@ -84,6 +85,7 @@
     <p>X-axis: flights ordered by XC points </p>
     <p>Y-axis: (natural) logarithm of the XC-points per 100<br /> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (XC=100 points is chosen as the normal value) </p>
     <p>Red line: standard normal distribution curve (normalized to number of points) </p>
+    <p>Green line: Gamma distribution</p>
     <img src="{{img2_b64}}"/>
 </div>
 {% endif %}
