--- a/glider_stats_app/templates/_menu.html
+++ b/glider_stats_app/templates/_menu.html
@@ -1,7 +1,10 @@
 {# _menu.html #}
 
 <nav class="w3-bar w3-black">
-  <a href="{{ url_for('index') }}" class="w3-button w3-round-large">Home</a>
+  <a href="{{ request.app.state.config.ROOT_PATH }}" class="w3-button w3-round-large"><i class="fa fa-home"></i></a>
+  <a href="{{ url_for('index') }}" class="w3-button w3-round-large">Overview</a>
+  {% if not request.app.state.config.ROOT_PATH %}
   <a href="{{ url_for('pilots') }}" class="w3-button w3-round-large">Pilots</a>
+  {% endif %}
   <a href="{{ url_for('gliders') }}" class="w3-button w3-round-large">Gliders</a>
 </nav>
