Glider stats - add github to menu

--- a/glider_stats_app/templates/_menu.html
+++ b/glider_stats_app/templates/_menu.html
@@ -7,4 +7,5 @@
   <a href="{{ url_for('pilots') }}" class="w3-button w3-round-large">Pilots</a>
   {% endif %}
   <a href="{{ url_for('gliders') }}" class="w3-button w3-round-large">Gliders</a>
+  <a href="https://github.com/rappakos/paraglider-stats" target="_blank" class="w3-button w3-round-large"><i class="fa fa-github"></i> GitHub</a>  
 </nav>
